base functionalities of summarizer